2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.c: op_simplify_path_name(): strip leading '/'
	* daemon/oprofiled.c:
	* dae/oprofiled.c: fix incorrect specification of vmlinux file
	  through --vmlinux=/foo//bar fixing #637805

2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_start_25: /dev/oprofile/kernel_only doesn't exists
	  in timer int mode. fix #637804

2002-11-14  John Levon  <levon@movementarian.org>

	* dae/*:
	* daemon/*:
	* libutil++/op_bfd.h:
	* pp/samples_container.cpp:
	* pp/samples_container.h: doxygen anality
 
2002-11-14  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: place in popt
	namespace to avoid clash with getopt.h

	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp_options.cpp:
	* pp/session.cpp: fix for above
 
	* libabi/abi.cpp:
	* libabi/abi.h: g++ 3.2 fixes

	* libabi/op_import.cpp: uninline extract

	* dae/Makefile.am:
	* daemon/Makefile.am: fix c++ link hack for -Werror
 
2002-11-13  Graydon Hoare  <graydon@redhat.com>

	( this changeset is mostly Dave Jones' work )

	* README:
	* TODO:
	* configure.in:
	* doc/oprofile.xml:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/op_help.c:
	* module/compat.h:
	* module/compat24.h:
	* module/op_util.c:
	* module/x86/Makefile.in:
	* module/x86/apic_compat.h:
	* module/x86/arch.h:
	* module/x86/cpu_type.c:
	* module/x86/op_fixmap.c:
	* module/x86/op_nmi.c: minor additions for hammer support.

	* module/x86/op_apic.c:
	* module/x86/op_apic.h: major cleanup; add hammer support.
	
	* module/x86/hammer_entry.S:
	* module/x86/hammer_ia32entry.S:
	* module/x86/hammer_op_syscalls.c:
	* module/x86/hammer_oprofile_nmi.S: new hammer support files.

2002-11-14  John Levon  <levon@movementarian.org>

	* configure.in: hack around case where clean checkout
	  then ./configure --with-kernel-support
 