@@ -1,5 +1,9 @@
 2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* Makefile.am: we installed module in the wrong directory.
+
+2002-11-14  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libutil/op_file.c: op_simplify_path_name(): strip leading '/'
 	* daemon/oprofiled.c:
 	* dae/oprofiled.c: fix incorrect specification of vmlinux file
